--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Accessibility assessment</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
     <!--[if lt IE 9]>
@@ -15,10 +15,10 @@
 
   <body>
     <div class="header">
-      <font size="7">Welcome to our wildlife website</font>
+      <h1>Welcome to our wildlife website</h1>
     </div>
 
-    <div class="nav">
+    <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
@@ -27,36 +27,41 @@
       </ul>
 
       <form class="search">
+        <label for="search" class="sr-only">Search this site</label>
         <input type="search" name="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
-    </div>
+    </nav>
 
     <main>
       <article>
-        <font size="6">The trouble with Bears</font>
-        <br><br>
-        By Evan Wild
-        <br><br>
+        <h2>The Trouble with Bears</h2>
+        <p><strong>By Evan Wild</strong></p>
+        <p>
         Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.
-        <br><br>
+        </p>
+        <p>
         So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.
-        <br><br>
-        <font size="5">Types of bear</font>
-        <br><br>
+        </p>
+
+        <section>
+        <h3>Types of bear</h3>
+        <p>
         Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.
-        <br><br>
+        </p>
+        <p>
         Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
-        <br><br>
-        <table>
+        </p>
+        </section>
+        <table role="presentation" summary="Table describes the different bear type's characteristics.">
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope="col">Bear Type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
           <tbody>
@@ -79,53 +84,66 @@
           </tbody>
         </table>
 
-        <font size="5">Habitats and Eating habits</font>
-        <br><br>
+      <section>
+        <h3>Habitats and Eating habits</h3>
+        <p>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
-        <br><br>
-        <img src="media/wild-bear.jpg">
-        <br><br>
+        </p>
+        <img src="img/wild-bear.jpg" alt="Wild Bear">
+        <p>
         Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
-        <br><br>
-        <img src="media/urban-bear.jpg">
-        <br><br>
+        </p>
+        <img src="img/urban-bear.jpg" alt="Urban Bear">
+        <p>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
-        <br><br>
-        <font size="5">Mating rituals</font>
-        <br><br>
+        </p>
+        <h3>Mating rituals</h3>
+        <p>
         Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
-        <br><br>
+        </p>
+        <p>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
-        <br><br>
-        <audio controls>
-          <source src="media/bear.mp3" type="audio/mp3">
-          <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
+        <p>
+        <audio controls="controls" aria-label="Bear sounds">
+          <source src="sounds/bear.mp3" type="audio/mp3">
+          <track src="captions_en.vtt" kind="captions" srclang="en" label="English Captions">
+          <source src="sounds/bear.ogg" type="audio/ogg">
+          <p>It looks like your browser doesn't support HTML5 audio players, but you can listen to the <a href="sounds/bear.mp3">audio</a></p>
         </audio>
-
+        </p>
+        <p>
+        <details> 
+          <summary>Read Transcript</summary>
+          <p>
+            This isn't really an audio file about bears, but it is an audio file that you can transcribe.
+          </p>
+        </details>
+        </p>
+      </section>
+      <section>
         <aside>
-
-          <font size="5">About the author</font>
-        <br><br>
+          <h3>About the author</h3>
+        <p>
           Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
-        <br><br>
+          <br>
           He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.
-
+        </p>
         </aside>
+      </section>
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <div class="show-hide" tabindex="0" role="button">Show comments</div>
 
           <div class="comment-wrapper">
 
-            <font size="6">Add comment</font>
+            <h2>Add comment</h2>
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
+                <label for="name">Your name:</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
               <div class="flex-pair">
-                Your comment:
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
               <div>
@@ -133,7 +151,7 @@
               </div>
             </form>
 
-            <font size="6">Comments</font>
+            <h2>Comments</h2>
 
             <ul class="comment-container">
 
@@ -152,7 +170,7 @@
       </article>
 
       <div class="secondary">
-        <font size="6">Related</font>
+        <h2>Related</h2>
 
         <ul>
           <li><a href="#">The trouble with Bees</a></li>
