--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <p>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
         </p>
-        <img src="img/wild-bear.jpg" alt="Wild Bear">
+        <img src="img/wild-bear.jpg" alt="A large brown bear standing in a river">
         <p>
         Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
         </p>
-        <img src="img/urban-bear.jpg" alt="Urban Bear">
+        <img src="img/urban-bear.jpg" alt="A bear standing outside a fence in the city">
         <p>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
         </p>
