--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <source src="sounds/bear.mp3" type="audio/mp3">
           <track src="captions_en.vtt" kind="captions" srclang="en" label="English Captions">
           <source src="sounds/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players, but you can listen to the <a href="sounds/bear.mp3">audio</a></p>
+          <p>If the audio doesn't work,  you can listen to the audio <a href="sounds/bear.mp3">here.</a></p>
         </audio>
         </p>
         <p>
@@ -131,7 +131,7 @@
         </aside>
       </section>
         <section class="comments">
-          <div class="show-hide" tabindex="0" role="button">Show comments</div>
+          <button class="show-hide">Show comments</button>
 
           <div class="comment-wrapper">
 
