--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </aside>
       </section>
         <section class="comments">
-          <button class="show-hide">Show comments</button>
+          <button class="show-hide" tabindex="0">Show comments</button>
 
           <div class="comment-wrapper">
 
